--- a/main/project/webpage.css
+++ b/main/project/webpage.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.4.4 | MIT License | https://tailwindcss.com
+! tailwindcss v3.4.6 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -578,6 +578,10 @@ video {
   left: -0.5rem;
 }
 
+.-right-10 {
+  right: -2.5rem;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
@@ -592,6 +596,10 @@ video {
 
 .left-9 {
   left: 2.25rem;
+}
+
+.right-0 {
+  right: 0px;
 }
 
 .right-10 {
@@ -638,6 +646,10 @@ video {
   top: 1.25rem;
 }
 
+.-right-20 {
+  right: -5rem;
+}
+
 .-z-40 {
   z-index: -40;
 }
@@ -682,8 +694,8 @@ video {
   margin: 1rem;
 }
 
-.m-\[5\%\] {
-  margin: 5%;
+.m-\[10\%\] {
+  margin: 10%;
 }
 
 .m-auto {
@@ -815,6 +827,46 @@ video {
 
 .mt-8 {
   margin-top: 2rem;
+}
+
+.mr-20 {
+  margin-right: 5rem;
+}
+
+.mr-12 {
+  margin-right: 3rem;
+}
+
+.mr-8 {
+  margin-right: 2rem;
+}
+
+.mr-1 {
+  margin-right: 0.25rem;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
+.mr-28 {
+  margin-right: 7rem;
+}
+
+.mr-3 {
+  margin-right: 0.75rem;
+}
+
+.mr-40 {
+  margin-right: 10rem;
+}
+
+.mr-0 {
+  margin-right: 0px;
+}
+
+.mr-24 {
+  margin-right: 6rem;
 }
 
 .inline-block {
@@ -965,6 +1017,10 @@ video {
   width: 18rem;
 }
 
+.w-\[10\%\] {
+  width: 10%;
+}
+
 .w-\[100\%\] {
   width: 100%;
 }
@@ -975,6 +1031,10 @@ video {
 
 .w-\[20\%\] {
   width: 20%;
+}
+
+.w-\[200px\] {
+  width: 200px;
 }
 
 .w-\[30\%\] {
@@ -1040,6 +1100,10 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-\[140px\] {
+  width: 140px;
 }
 
 .max-w-\[480px\] {
@@ -1124,6 +1188,10 @@ video {
   align-items: center;
 }
 
+.justify-end {
+  justify-content: flex-end;
+}
+
 .justify-center {
   justify-content: center;
 }
@@ -1191,6 +1259,10 @@ video {
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
 }
 
 .scroll-smooth {
@@ -1643,6 +1715,10 @@ video {
   padding-top: 1rem;
 }
 
+.pr-12 {
+  padding-right: 3rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -1738,30 +1814,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-\[20px\] {
-  font-size: 20px;
-}
-
-.text-\[18px\] {
-  font-size: 18px;
-}
-
-.text-\[17px\] {
-  font-size: 17px;
-}
-
-.text-\[18\.5px\] {
-  font-size: 18.5px;
-}
-
-.text-\[178px\] {
-  font-size: 178px;
-}
-
-.text-\[1px\] {
-  font-size: 1px;
 }
 
 .font-bold {
@@ -1931,18 +1983,6 @@ video {
   color: rgb(234 179 8 / var(--tw-text-opacity));
 }
 
-.text-\[\] {
-  color: ;
-}
-
-.text-\[18\.px\] {
-  color: 18.px;
-}
-
-.text-\[18\] {
-  color: 18;
-}
-
 .text-opacity-0 {
   --tw-text-opacity: 0;
 }
@@ -2067,7 +2107,7 @@ video {
 .backdrop-blur-sm {
   --tw-backdrop-blur: blur(4px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
 .transition-all {
@@ -2285,9 +2325,19 @@ video {
   align-items: center;
 }
 
+.before\:justify-start::before {
+  content: var(--tw-content);
+  justify-content: flex-start;
+}
+
 .before\:justify-center::before {
   content: var(--tw-content);
   justify-content: center;
+}
+
+.before\:overflow-hidden::before {
+  content: var(--tw-content);
+  overflow: hidden;
 }
 
 .before\:rounded-full::before {
@@ -2322,6 +2372,17 @@ video {
   content: var(--tw-content);
   --tw-bg-opacity: 1;
   background-color: rgb(250 204 21 / var(--tw-bg-opacity));
+}
+
+.before\:pl-4::before {
+  content: var(--tw-content);
+  padding-left: 1rem;
+}
+
+.before\:text-lg::before {
+  content: var(--tw-content);
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .before\:text-xl::before {
@@ -2443,6 +2504,16 @@ video {
 
 .before\:content-\[\'Watch\'\]::before {
   --tw-content: 'Watch';
+  content: var(--tw-content);
+}
+
+.before\:content-\[\'home\'\]::before {
+  --tw-content: 'home';
+  content: var(--tw-content);
+}
+
+.before\:content-\[\'portfolio\'\]::before {
+  --tw-content: 'portfolio';
   content: var(--tw-content);
 }
 
