--- a/main/project/webpage.css
+++ b/main/project/webpage.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.4.6 | MIT License | https://tailwindcss.com
+! tailwindcss v3.4.4 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -646,10 +646,6 @@ video {
   top: 1.25rem;
 }
 
-.-right-20 {
-  right: -5rem;
-}
-
 .-z-40 {
   z-index: -40;
 }
@@ -700,6 +696,22 @@ video {
 
 .m-auto {
   margin: auto;
+}
+
+.m-\[8\%\] {
+  margin: 8%;
+}
+
+.m-\[5\%\] {
+  margin: 5%;
+}
+
+.m-\[59\%\] {
+  margin: 59%;
+}
+
+.m-\[9\%\] {
+  margin: 9%;
 }
 
 .mx-10 {
@@ -757,6 +769,16 @@ video {
   margin-bottom: auto;
 }
 
+.mx-\[9\%\] {
+  margin-left: 9%;
+  margin-right: 9%;
+}
+
+.my-\[510\%\] {
+  margin-top: 510%;
+  margin-bottom: 510%;
+}
+
 .mb-10 {
   margin-bottom: 2.5rem;
 }
@@ -805,6 +827,10 @@ video {
   margin-left: auto;
 }
 
+.mr-24 {
+  margin-right: 6rem;
+}
+
 .mr-4 {
   margin-right: 1rem;
 }
@@ -829,44 +855,28 @@ video {
   margin-top: 2rem;
 }
 
-.mr-20 {
-  margin-right: 5rem;
+.-mr-5 {
+  margin-right: -1.25rem;
 }
 
-.mr-12 {
-  margin-right: 3rem;
+.mr-5 {
+  margin-right: 1.25rem;
 }
 
-.mr-8 {
-  margin-right: 2rem;
+.mr-10 {
+  margin-right: 2.5rem;
 }
 
-.mr-1 {
-  margin-right: 0.25rem;
+.mr-14 {
+  margin-right: 3.5rem;
 }
 
-.mr-2 {
-  margin-right: 0.5rem;
+.mt-\[10\%\] {
+  margin-top: 10%;
 }
 
-.mr-28 {
-  margin-right: 7rem;
-}
-
-.mr-3 {
-  margin-right: 0.75rem;
-}
-
-.mr-40 {
-  margin-right: 10rem;
-}
-
-.mr-0 {
-  margin-right: 0px;
-}
-
-.mr-24 {
-  margin-right: 6rem;
+.block {
+  display: block;
 }
 
 .inline-block {
@@ -977,6 +987,11 @@ video {
   height: 100svh;
 }
 
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
 .max-h-\[1300px\] {
   max-height: 1300px;
 }
@@ -1029,12 +1044,12 @@ video {
   width: 120px;
 }
 
-.w-\[20\%\] {
-  width: 20%;
+.w-\[140px\] {
+  width: 140px;
 }
 
-.w-\[200px\] {
-  width: 200px;
+.w-\[20\%\] {
+  width: 20%;
 }
 
 .w-\[30\%\] {
@@ -1102,8 +1117,44 @@ video {
   width: 100vw;
 }
 
-.w-\[140px\] {
-  width: 140px;
+.w-\[1px\] {
+  width: 1px;
+}
+
+.w-\[138px\] {
+  width: 138px;
+}
+
+.w-\[137px\] {
+  width: 137px;
+}
+
+.w-\[\] {
+  width: ;
+}
+
+.w-\[fu\] {
+  width: fu;
+}
+
+.w-\[100px\] {
+  width: 100px;
+}
+
+.w-\[1380px\] {
+  width: 1380px;
+}
+
+.w-1 {
+  width: 0.25rem;
+}
+
+.w-4\/5 {
+  width: 80%;
+}
+
+.w-\[85\%\] {
+  width: 85%;
 }
 
 .max-w-\[480px\] {
@@ -1138,6 +1189,10 @@ video {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.cursor-grabbing {
+  cursor: grabbing;
 }
 
 .grid-cols-1 {
@@ -1186,6 +1241,10 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-end {
@@ -1259,10 +1318,6 @@ video {
 
 .overflow-hidden {
   overflow: hidden;
-}
-
-.overflow-x-hidden {
-  overflow-x: hidden;
 }
 
 .scroll-smooth {
@@ -1530,6 +1585,11 @@ video {
   background-color: rgb(250 204 21 / var(--tw-bg-opacity));
 }
 
+.bg-yellow-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 249 195 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-60 {
   --tw-bg-opacity: 0.6;
 }
@@ -1683,6 +1743,16 @@ video {
   padding-bottom: 2rem;
 }
 
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
 .pb-20 {
   padding-bottom: 5rem;
 }
@@ -1707,16 +1777,16 @@ video {
   padding-left: 2rem;
 }
 
+.pr-12 {
+  padding-right: 3rem;
+}
+
 .pr-4 {
   padding-right: 1rem;
 }
 
 .pt-4 {
   padding-top: 1rem;
-}
-
-.pr-12 {
-  padding-right: 3rem;
 }
 
 .text-center {
@@ -2107,7 +2177,7 @@ video {
 .backdrop-blur-sm {
   --tw-backdrop-blur: blur(4px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
 .transition-all {
@@ -2253,6 +2323,11 @@ video {
   z-index: 50;
 }
 
+.before\:z-0::before {
+  content: var(--tw-content);
+  z-index: 0;
+}
+
 .before\:m-auto::before {
   content: var(--tw-content);
   margin: auto;
@@ -2320,6 +2395,12 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.before\:translate-x-0::before {
+  content: var(--tw-content);
+  --tw-translate-x: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .before\:items-center::before {
   content: var(--tw-content);
   align-items: center;
@@ -2330,14 +2411,14 @@ video {
   justify-content: flex-start;
 }
 
+.before\:justify-end::before {
+  content: var(--tw-content);
+  justify-content: flex-end;
+}
+
 .before\:justify-center::before {
   content: var(--tw-content);
   justify-content: center;
-}
-
-.before\:overflow-hidden::before {
-  content: var(--tw-content);
-  overflow: hidden;
 }
 
 .before\:rounded-full::before {
@@ -2374,6 +2455,12 @@ video {
   background-color: rgb(250 204 21 / var(--tw-bg-opacity));
 }
 
+.before\:bg-black::before {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .before\:pl-4::before {
   content: var(--tw-content);
   padding-left: 1rem;
@@ -2389,6 +2476,18 @@ video {
   content: var(--tw-content);
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.before\:text-sm::before {
+  content: var(--tw-content);
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.before\:text-xs::before {
+  content: var(--tw-content);
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .before\:font-bold::before {
@@ -2507,13 +2606,53 @@ video {
   content: var(--tw-content);
 }
 
+.before\:content-\[\'portfolio\'\]::before {
+  --tw-content: 'portfolio';
+  content: var(--tw-content);
+}
+
 .before\:content-\[\'home\'\]::before {
   --tw-content: 'home';
   content: var(--tw-content);
 }
 
-.before\:content-\[\'portfolio\'\]::before {
-  --tw-content: 'portfolio';
+.before\:content-\[\'Home\'\]::before {
+  --tw-content: 'Home';
+  content: var(--tw-content);
+}
+
+.before\:content-\[\'About\'\]::before {
+  --tw-content: 'About';
+  content: var(--tw-content);
+}
+
+.before\:content-\[\'protfolio\'\]::before {
+  --tw-content: 'protfolio';
+  content: var(--tw-content);
+}
+
+.before\:content-\[\'contact\'\]::before {
+  --tw-content: 'contact';
+  content: var(--tw-content);
+}
+
+.before\:content-\[\'blog\'\]::before {
+  --tw-content: 'blog';
+  content: var(--tw-content);
+}
+
+.before\:content-\[\'Blog\'\]::before {
+  --tw-content: 'Blog';
+  content: var(--tw-content);
+}
+
+.before\:content-\[\'Contact\'\]::before {
+  --tw-content: 'Contact';
+  content: var(--tw-content);
+}
+
+.before\:content-\[\'Portfolio\'\]::before {
+  --tw-content: 'Portfolio';
   content: var(--tw-content);
 }
 
@@ -2548,6 +2687,11 @@ video {
   content: var(--tw-content);
 }
 
+.hover\:translate-x-0:hover {
+  --tw-translate-x: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .hover\:scale-125:hover {
   --tw-scale-x: 1.25;
   --tw-scale-y: 1.25;
@@ -2572,6 +2716,10 @@ video {
 
 .hover\:animate-spin:hover {
   animation: spin 1s linear infinite;
+}
+
+.hover\:cursor-alias:hover {
+  cursor: alias;
 }
 
 .hover\:border:hover {
@@ -2636,6 +2784,11 @@ video {
 .hover\:bg-yellow-400:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(250 204 21 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-black:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .hover\:font-mono:hover {
@@ -2724,6 +2877,11 @@ video {
   transition-duration: 300ms;
 }
 
+.hover\:before\:-inset-10:hover::before {
+  content: var(--tw-content);
+  inset: -2.5rem;
+}
+
 .hover\:before\:translate-x-0:hover::before {
   content: var(--tw-content);
   --tw-translate-x: 0px;
@@ -2733,6 +2891,12 @@ video {
 .hover\:before\:translate-y-0:hover::before {
   content: var(--tw-content);
   --tw-translate-y: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:before\:-translate-x-0:hover::before {
+  content: var(--tw-content);
+  --tw-translate-x: -0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -2771,9 +2935,17 @@ video {
     left: 0px;
   }
 
+  .max-sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .max-sm\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  .max-sm\:leading-10 {
+    line-height: 2.5rem;
   }
 
   .max-sm\:before\:hidden::before {
@@ -2798,6 +2970,10 @@ video {
 
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 
   .sm\:text-2xl {
@@ -2837,6 +3013,10 @@ video {
   .md\:my-10 {
     margin-top: 2.5rem;
     margin-bottom: 2.5rem;
+  }
+
+  .md\:inline-block {
+    display: inline-block;
   }
 
   .md\:flex {
@@ -2920,6 +3100,10 @@ video {
     padding: 1rem;
   }
 
+  .md\:p-3 {
+    padding: 0.75rem;
+  }
+
   .md\:px-4 {
     padding-left: 1rem;
     padding-right: 1rem;
@@ -2933,6 +3117,31 @@ video {
   .md\:py-8 {
     padding-top: 2rem;
     padding-bottom: 2rem;
+  }
+
+  .md\:py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .md\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .md\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .md\:px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
+  .md\:px-1 {
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
   }
 
   .md\:font-sans {
@@ -3021,6 +3230,10 @@ video {
 
   .lg\:ml-10 {
     margin-left: 2.5rem;
+  }
+
+  .lg\:block {
+    display: block;
   }
 
   .lg\:h-\[calc\(100vh-90px\)\] {
