--- a/main/project/webpage.css
+++ b/main/project/webpage.css
@@ -646,6 +646,10 @@ video {
   top: 1.25rem;
 }
 
+.top-10 {
+  top: 2.5rem;
+}
+
 .-z-40 {
   z-index: -40;
 }
@@ -939,6 +943,11 @@ video {
 
 .h-svh {
   height: 100svh;
+}
+
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
 }
 
 .max-h-\[1300px\] {
@@ -2997,6 +3006,18 @@ video {
     margin-left: 2.5rem;
   }
 
+  .lg\:mb-\[1\%\] {
+    margin-bottom: 1%;
+  }
+
+  .lg\:mb-\[\%\] {
+    margin-bottom: %;
+  }
+
+  .lg\:mb-\[5\%\] {
+    margin-bottom: 5%;
+  }
+
   .lg\:block {
     display: block;
   }
@@ -3101,18 +3122,5 @@ video {
 @media (min-width: 1280px) {
   .xl\:ml-20 {
     margin-left: 5rem;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .dark\:bg-white {
-    --tw-bg-opacity: 1;
-    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  }
-
-  .dark\:open\:select-all[open] {
-    -webkit-user-select: all;
-       -moz-user-select: all;
-            user-select: all;
   }
 }
